# FactScoreLite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  atomic_facts.py  configs.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy-to-pypi.yml  python-test.yml
FactScoreLite/: __init__.py  atomic_facts.py  configs.py  fact_scorer.py  factscore.py  openai_agent.py  scorer.py  state_handler.py
FactScoreLite/data/: atomic_facts_demons.json  demons.json  demons_generation_prompt.txt  fact_scorer_demons.json
tests/: test_atomic_facts.py  test_fact_scorer.py  test_factscore.py  test_openai_agent.py  test_scorer.py  test_state_handler.py
