[metadata]
name = FactScoreLite
version = 0.1.0
author = armingh2000
author_email = 
license = MIT
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    nltk
    openai
    pytest
    pytest-mock
[options.package_data]
FactScoreLite = data/*
