[metadata]
name = FactScoreLite
version = 1.0.0
author = armingh2000
author_email = 
license = MIT
description = "FactScore (Fine-grained atomic evaluation of factual precision in long form text generation) computing package."
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/armingh2000/FactScoreLite"

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    nltk
    openai
    pytest
    pytest-mock
[options.package_data]
FactScoreLite = data/*
